# foodie-back

./: Cargo.toml  Endpoints.md  README.md  logfile
migrations/2022-09-24-081956_restaurants/: down.sql  up.sql
migrations/2022-09-24-083048_restaurant_city/: down.sql  up.sql
migrations/2022-09-24-083329_restaurant_cuisine/: down.sql  up.sql
migrations/2022-09-24-083906_restaurant_foodtype/: down.sql  up.sql
migrations/2022-09-24-084129_restaurant_tables/: down.sql  up.sql
migrations/2022-09-24-084248_users/: down.sql  up.sql
migrations/2022-09-24-084350_comments/: down.sql  up.sql
migrations/2022-09-24-084548_ratings/: down.sql  up.sql
migrations/2022-09-25-073812_populate_cities/: up.sql
migrations/2022-09-25-113053_create_restaurants/: up.sql
migrations/2023-02-26-172032_restaurant_category/: down.sql  up.sql
migrations/2023-02-26-172401_restaurant_menu/: down.sql  up.sql
migrations/2023-02-26-180457_user_favorites/: down.sql  up.sql
migrations/2023-04-10-070753_reservation/: up.sql
src/: db.rs  errors.rs  main.rs  routes.rs  schema.rs
src/models/: city.rs  favorites.rs  menu_item.rs  mod.rs  reservations.rs  restaurant_category.rs  restaurant_cuisine.rs  restaurant_info.rs  restaurant_location.rs  restaurant_table.rs  types.rs  user_info.rs
src/routes/: category.rs  city.rs  favorite.rs  location.rs  mod.rs  reservation.rs  restaurant.rs  table.rs  user.rs
