[package]
name = "foodie-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
bigdecimal = { version = "0.3.0", features = ["serde"] }
chrono = "0.4.22"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "uuid", "chrono", "numeric", "uuid", "serde_json"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.9.1"
lazy_static = "1.4.0"
r2d2 = "0.8.10"
serde = "1.0.145"
serde_json = "1.0.85"
thiserror = "1.0.38"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
